Fix alignment of the form and form margins.
Pure styling fixes.

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 1;2c.tbox {position:absolute; display:none; padding:14px 17px; z-index:900}
+.tbox {position:absolute; display:none; padding:14px 17px; z-index:900}
 .tinner {padding:15px; -moz-border-radius:5px; border-radius:5px; background:#fff url(images/preload.gif) no-repeat 50% 50%; border-right:1px solid #333; border-bottom:1px solid #333}
 .tmask {position:absolute; display:none; top:0px; left:0px; height:100%; width:100%; background:#000; z-index:800}
 .tclose {position:absolute; top:0px; right:0px; width:30px; height:30px; cursor:pointer; background:url(images/close.png) no-repeat}
@@ -58,10 +59,17 @@ p {
     
 .form fieldset {
     border:0;
+    margin:0;
+    padding:0 5px 5px; 5px;;
 }
 
  
 .form select#commandselect {
+    min-width:300px;
+    max-width:500px;
+}
+
+.form select#commandselect option {
     min-width:300px;
     max-width:500px;
 }
@@ -72,14 +80,15 @@ p {
 	line-height:32px;
         display: block;
         float: left;
-	width:300px;
+	width:250px;
+	margin-top:10px;
     }
 
 .form input, .form select {
         display: block;
 	min-width:300px;
         float: left;
-
+	margin-top:10px;
 font-size:16px;
 padding:5px;
 border-radius: 6px 6px 6px 6px;
@@ -99,8 +108,22 @@ background: -moz-linear-gradient(top,  #F6F6F6,  #E0E0E0); /* for firefox 3.6+ *
    background: -moz-linear-gradient(top,  #FFFFFF,  #FCFCFC); /* for firefox 3.6+ */
    border: 1px solid #333333;
 }
+.form select option{
+    background-color:#FBFBFB;
+    padding: 1px 5px;
+    border:0;
+}
+.form select#routerselect option[value="2"]:before {
+    content: url("http://icons.iconarchive.com/icons/jeanette-foshee/simpsons-08/16/Marge-O-Rama-Officer-Marge-Simpson-2-icon.png");
+} 
 
- 
+.form select#routerselect option[value="1"]:before {
+    content: url("http://icons.iconarchive.com/icons/jeanette-foshee/simpsons-02/16/Folder-Homer-icon.png");
+}
+
+.form select#routerselect option[value="0"]:before {
+    content: url("http://icons.iconarchive.com/icons/jeanette-foshee/simpsons-09/16/Lisas-Wedding-Older-Marge-icon.png")
+}
 
 .form br
     {
